<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/edittext_username"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_a"
        app:layout_constraintEnd_toEndOf="@+id/guideline_vertical_b"
        android:text="@string/app_name_in_app"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:layout_marginBottom="10dp"
        android:textStyle="bold|italic"
        app:layout_constraintVertical_bias="0.25"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_a"
        app:layout_constraintBottom_toBottomOf="@+id/guideline_horizontal_c"
        android:text="@string/username_colon"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_a"
        app:layout_constraintBottom_toBottomOf="@+id/guideline_horizontal_b"
        android:text="@string/password_colon"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/shape_white_stroke"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_a"
        app:layout_constraintEnd_toEndOf="@+id/guideline_vertical_b"
        app:layout_constraintTop_toTopOf="@+id/guideline_horizontal_c"
        app:layout_constraintBottom_toBottomOf="@+id/guideline_horizontal_a"
        android:maxLines="1"
        android:inputType="text"
        android:imeOptions="actionNext"
        android:hint="@string/username"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/shape_white_stroke"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_a"
        app:layout_constraintEnd_toEndOf="@+id/guideline_vertical_b"
        app:layout_constraintTop_toTopOf="@+id/guideline_horizontal_b"
        app:layout_constraintBottom_toBottomOf="@+id/guideline_horizontal_d"
        android:maxLines="1"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        android:hint="@string/password"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="18sp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_login"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:background="@drawable/selector_button_green"
        android:gravity="center"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:text="@string/login"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_a"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical_b"
        app:layout_constraintTop_toTopOf="@id/guideline_horizontal_d"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <!-- Guidelines -->

    <!-- Vertical -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_a"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_b"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8"/>

    <!-- Horizontal -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_a"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_b"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_c"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_d"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>