<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/layout_search_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/layout_search_field"
        app:layout_constraintHeight_percent="0.03"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:text="@string/search_colon"
            android:textStyle="bold"
            android:textSize="14sp"
            android:paddingStart="5dp"
            android:paddingEnd="0dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_search_field"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.075"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintVertical_bias="0"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@drawable/shape_white_stroke"
            android:layout_marginEnd="5dp">

            <EditText
                android:id="@+id/edittext_movie_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/red_a"
                android:hint="@string/movie_name"
                android:textColor="@color/black"
                android:textColorHint="@color/grey_b"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:maxLines="1"
                android:inputType="text"
                android:imeOptions="actionDone"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_search"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:text="Go"
                android:textAllCaps="false"/>

        </LinearLayout>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/recycler_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/layout_search_title"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="10dp"
        android:background="@drawable/shape_white_stroke">

        <TextView
            android:id="@+id/textview_query_status"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/start_a_search"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_movie"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="5dp"
            android:visibility="gone"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>